<resources>
    <string name="app_name">Mystic Vine</string>
    <string name="level">Lv.</string>
    <string name="custom_game_description">Come join and engage in a personalized game session created specifically for you and your friends.</string>
    <string name="custom_game_title">Custom Game</string>
    <string name="welcome">Welcome,</string>
    <string name="coin">2.410.6188</string>
    <string name="slash">/</string>
    <string name="question">Question</string>
    <string name="remember_flash">Don\'t forget to review your flash cards</string>
    <string name="remember">Remember</string>
    <string name="forgot">Forgot</string>
    <string name="back_to_home">Back To Home</string>
    <string name="username_et_hint">Enter your name</string>
    <string name="finish_flash_card">You have finished the daily flashcard</string>
    <string name="biometric_prompt_desc">"Biometric login for Mystic Vine"</string>
    <string name="biometric_prompt_title">"Log in using your biometric credential</string>
    <string name="cancel">Cancel</string>
    <string name="biometric_auth_failed">Authentication failed</string>
    <string name="join_party">Join Party</string>
    <string name="create_party">Create Party</string>
    <string name="party_code">*Party Code</string>
    <string name="ef23_1">EF23-1</string>
    <string name="host">*Host</string>
    <string name="party_member">Party Member</string>
    <string name="welcome_user">Welcome, %1$s</string>
    <string name="start_game">Start Game</string>
    <string name="answer">Answer</string>
    <string name="custom_quiz_title">Create a question and provide the correct answer to challenge your friends!</string>
    <string name="finalize">Finalize</string>
    <string name="asked_by">Asked by %1$s</string>
    <string name="back_to_party">Back To Party</string>
    <string name="waiting_for_host_back_to_party">Waiting for host back to party</string>
    <string name="room_not_available">Room Not Available</string>
    <string name="waiting_for_other_players">Waiting for other players</string>
    <string name="waiting_for_host_to_start">Waiting for Host to Start</string>
    <string name="waiting_for_host_to_continue">Waiting for host to continue</string>
    <string name="enter_party_code">Enter Party Code</string>
    <string name="create_a_new_party">Create a new party</string>
    <string name="custom_game">Custom Game</string>
    <string name="leaderboard">LeaderBoard</string>
    <string name="see_more">See More...</string>
    <string name="recommended_quizzes">Recommended Quizzes</string>
    <string name="explore_on_quizzes">Explore On Quizzes</string>
    <string name="exp_loss_desc">The x2 Exp Loss Reducer halves the XP you lose, helping you maintain your progress and level up more efficiently.</string>
    <string name="exp_loss_title">x2 Loss Reducer</string>
    <string name="exp2x_title">x2 Exp Booster</string>
    <string name="exp2x_desc">The x2 Exp Booster doubles your earned XP for a limited time, helping you level up faster and unlock new abilities quickly.</string>
    <string name="x2_coin_title">x2 Coin Booster</string>
    <string name="x2_coin_desc">The x2 Coin Booster doubles the coins you earn, allowing you to accumulate wealth faster and unlock valuable items more quickly.</string>
    <string name="store">Store</string>
    <string name="quiz_name">Input Quiz Name</string>
    <string name="create_quiz">Create Quiz</string>
    <string name="option_a">Option A</string>
    <string name="option_b">Option B</string>
    <string name="option_c">Option C</string>
    <string name="option_d">Option D</string>
    <string name="option_e">Option E</string>
    <string name="option">Option</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register_now">Register Now!!!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="or">Or</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login_now">Login Now!!!</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">REGISTER</string>
    <string name="my_quizzes">My Quizzes</string>
    <string name="my_flash_card">My Flash Card</string>
    <string name="create_card">Create Card</string>
    <string name="create_a_question_and_provide_the_correct_answer_for_your_flash_card">Create a question and provide the correct answer for your flash card</string>
    <string name="asked_by_vu24_1">Asked By VU24-1</string>
    <string name="create_new_quiz">Create New Quiz</string>
</resources>