<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="125dp"
        android:layout_height="290dp"
        android:layout_marginEnd="-4dp"
        android:layout_marginTop="-25dp"
        android:layout_gravity="top|end"
        android:src="@drawable/top_right_decoration" />

    <ImageView
        android:layout_width="180dp"
        android:layout_height="300dp"
        android:layout_marginBottom="-45dp"
        android:layout_gravity="bottom|start"
        android:src="@drawable/bottom_left_decoration" />
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_picture"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="top|end"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/light_orange_circle"
        android:scaleType="centerCrop" />

    <ImageView
        android:id="@+id/close_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="top|start"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:scaleType="centerCrop"
        android:src="@drawable/close_button" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="60dp"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:background="@drawable/big_light_orange_rounded" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:letterSpacing="0"
                android:text="60"
                android:textColor="@color/peach"
                android:textSize="25sp" />
        </FrameLayout>


        <TextView
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/dark_green"
            android:text="@string/custom_quiz_title"/>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="390dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/dark_green_rounded">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/et_question"
                    android:layout_width="match_parent"
                    android:layout_height="71dp"
                    android:layout_marginHorizontal="25dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="25dp"
                    android:background="@drawable/peach_rounded"
                    android:gravity="top"
                    android:hint="@string/question"
                    android:paddingHorizontal="15dp"
                    android:paddingVertical="15dp" />

                <EditText
                    android:id="@+id/et_answer"
                    android:layout_width="match_parent"
                    android:layout_height="225dp"
                    android:layout_marginHorizontal="25dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/peach_rounded"
                    android:gravity="top"
                    android:hint="@string/answer"
                    android:paddingHorizontal="15dp"
                    android:paddingVertical="15dp" />
            </LinearLayout>
        </FrameLayout>
        <Button
            android:id="@+id/btn_finalize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="13dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="35dp"
            android:backgroundTint="@color/light_orange"
            android:fontFamily="@font/source_sans_pro_bold"
            android:text="@string/finalize" />
    </LinearLayout>

</FrameLayout>
