<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LandingPage">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <!--   Header     -->
        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/dark_green"
            android:orientation="vertical"
            android:padding="6dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="10dp"
                android:orientation="horizontal">

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/level_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@drawable/light_dark_green_circle"
                        android:gravity="center"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|top"
                        android:layout_marginEnd="32dp"
                        android:layout_marginBottom="42dp"
                        android:text="@string/level"
                        android:textSize="12sp" />
                </FrameLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="bottom"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/exp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="10000"
                        android:layout_marginEnd="40dp"
                        android:layout_marginStart="10dp"
                        android:gravity="end"
                        android:textColor="@color/light_orange" />

                    <com.google.android.material.progressindicator.LinearProgressIndicator
                        android:id="@+id/level_progress"
                        android:layout_width="match_parent"
                        android:layout_height="18dp"
                        android:layout_gravity="bottom"
                        android:layout_marginVertical="10dp"
                        android:layout_marginEnd="40dp"
                        android:layout_marginStart="10dp"
                        android:elevation="4dp"
                        android:max="50"
                        android:progressBackgroundTintMode="add"
                        app:indicatorColor="@color/light_orange"
                        app:trackColor="@color/light_dark_green"
                        app:trackCornerRadius="24dp"
                        app:trackThickness="8dp"
                        tools:progress="50" />
                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|start"
                android:orientation="horizontal"
                android:paddingHorizontal="16dp"
                android:paddingVertical="4dp">

                <ImageView
                    android:contentDescription="@string/coin"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/coin" />

                <TextView
                    android:id="@+id/coin_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="4dp"
                    android:text="@string/coin" />
            </LinearLayout>

            <TextView
                android:id="@+id/welcome_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="8dp"
                android:paddingVertical="4dp"
                android:text="@string/welcome" />
        </LinearLayout>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_picture"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="top|end"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/light_orange_circle"
                android:scaleType="centerCrop" />

        </FrameLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:columnCount="2"
                    android:orientation="horizontal"
                    android:padding="12dp"
                    android:rowCount="1">

                    <LinearLayout
                        android:layout_width="175dp"
                        android:layout_height="277dp"
                        android:layout_margin="4dp"
                        android:background="@drawable/light_dark_green_rounded"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="12dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/leaderboard" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/rv_leaderboard"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />


                        <Button
                            android:id="@+id/leaderboard_button"
                            android:layout_width="152dp"
                            android:layout_height="40dp"
                            android:layout_marginHorizontal="4dp"
                            android:backgroundTint="@color/light_orange"
                            android:letterSpacing="0.05"
                            android:text="@string/see_more"
                            android:textSize="12sp" />

                    </LinearLayout>

                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">


                        <LinearLayout
                            android:layout_width="175dp"
                            android:layout_height="277dp"
                            android:layout_marginStart="6dp"
                            android:layout_marginTop="4dp"
                            android:layout_marginBottom="16dp"
                            android:background="@drawable/light_dark_green_rounded"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="117dp"
                                android:layout_marginBottom="-1dp"
                                android:src="@drawable/custom_card" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="8dp"
                                android:text="@string/custom_game_title"
                                android:textSize="18sp" />

                            <TextView
                                android:layout_width="147dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:fontFamily="@font/source_sans_pro_regular"
                                android:gravity="start"
                                android:text="@string/custom_game_description"
                                android:textSize="11sp" />
                        </LinearLayout>

                        <ImageView
                            android:id="@+id/custom_game"
                            android:layout_width="45dp"
                            android:layout_height="45dp"
                            android:layout_gravity="bottom|end"
                            android:layout_marginEnd="10dp"
                            android:layout_marginBottom="25dp"
                            android:background="@drawable/light_orange_circle"
                            android:padding="12dp"
                            android:src="@drawable/play" />
                    </FrameLayout>
                </GridLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="25dp"
                    android:background="@color/dark_green"
                    android:orientation="vertical"
                    android:paddingVertical="15dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:text="@string/recommended_quizzes"
                        android:textColor="@color/white"
                        android:textSize="24sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_marginHorizontal="20dp"
                        android:layout_marginVertical="8dp"
                        android:gravity="center"
                        android:background="@drawable/light_dark_green_rounded" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/rv_random_3_quiz"
                            android:layout_width="wrap_content"
                            android:layout_gravity="center"
                            android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:text="@string/explore_on_quizzes"
                        android:textColor="@color/dark_green"
                        android:textSize="20sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginHorizontal="20dp"
                        android:layout_marginVertical="10dp"
                        android:background="@drawable/light_dark_green_rounded" />

                    <GridLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:layout_marginBottom="30dp"
                        android:columnCount="1">
                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/rv_quiz_card"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:nestedScrollingEnabled="false"
                            />
                    </GridLayout>

                </LinearLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>


    </LinearLayout>


    <ImageView
        android:layout_width="120dp"
        android:layout_height="300dp"
        android:layout_gravity="top|end"
        android:src="@drawable/huge_logo" />

    <ImageView
        android:layout_width="30dp"
        android:layout_height="340dp"
        android:layout_gravity="top|start"
        android:src="@drawable/left_blob"
        android:translationZ="-1dp" />

    <ImageView
        android:layout_width="111dp"
        android:layout_height="107dp"
        android:layout_gravity="bottom|start"
        android:src="@drawable/bottom_blob"
        android:translationZ="-1dp" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginHorizontal="16dp"
        android:orientation="vertical">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/highscore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/light_orange"
            android:contentDescription="@string/app_name"
            android:src="@drawable/highscore_icon"
            android:visibility="invisible" />


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/shop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/light_orange"
            android:contentDescription="@string/app_name"
            android:src="@drawable/shop"
            android:visibility="invisible" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/light_orange"
            android:contentDescription="@string/app_name"
            android:src="@drawable/profile_icon"
            android:visibility="invisible" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/light_orange"
            android:contentDescription="@string/app_name"
            android:src="@drawable/round_home"
            android:visibility="invisible" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/sort_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/navigation_icon"
            android:elevation="0dp"/>


    </LinearLayout>


</FrameLayout>